--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,3 +37,7 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+  qiniuyun:
+    access-key: ${sky.qiniuyun.access-key}
+    secret-key: ${sky.qiniuyun.secret-key}
+    bucket: ${sky.qiniuyun.bucket}
